[package]
name = "map_projector_converter"
version = "0.1.0"
edition = "2021"
description = "Convert map projector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
